# plonky2-bls12-381-pairing

./: .pre-commit-config.yaml  Cargo.toml  flake.nix
src/: final_exponentiation.rs  final_exponentiation_helpers.rs  miller_loop.rs  pairing.rs
src/curves/: g1.rs  g2.rs
src/fields/: bls12_381base.rs  fq12_target.rs  fq2_target.rs  fq6_target.rs  fq_target.rs
src/native/: fin_exp_helpers.rs  final_exponentiation.rs  miller_loop.rs
src/utils/: helpers.rs
