[package]
name = "plonky2-bls12-381-pairing"
edition = "2021"
version = "0.1.0"

[dependencies]
plonky2 = "0.2.2"
plonky2_ecdsa = { git = "https://github.com/cfcosta/plonky2-ecdsa" }
plonky2_u32 = { git = "https://github.com/cfcosta/plonky2-u32" }
anyhow = "1.0.71"
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-std = "0.5.0"
itertools = "0.13.0"
rand = "0.8.5"
num-bigint = "0.4.4"
num = "0.4.0"
num-traits = "0.2"
subtle = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
